--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="manifest.json"></script>
     <script defer src="script.js"></script>
+    <link rel="icon" href="assets/StrongPass.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="assets/StrongPass.png">
 </head>
 <body>
    <main>
