--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StrongPass</title>
     <link rel="stylesheet" href="style.css">
-    <script src="manifest.json"></script>
+    <link rel="manifest" href="manifest.json"> <!-- Correct reference to manifest -->
     <script defer src="script.js"></script>
     <link rel="icon" href="assets/StrongPass.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="assets/StrongPass.png">
